--- a/dune
+++ b/dune
@@ -1,3 +1,5 @@
 (executable
- (name main)
+ (name dts_of_ocaml)
+ (public_name dts_of_ocaml)
+ (package dts_of_ocaml)
  (libraries compiler-libs.bytecomp))
